# mammudon

./: .gitignore  README.md  index.html  pyproject.toml
docs/: index.html
mammudon/: account.py  account_manager.py  conversation_view.py  conversations.py  debugging.py  format_post.py  history.py  html_to_text.py  image_browser.py  languages.py  listener.py  main_window.py  mammudon.py  media_attachment.py  media_editor.py  media_playback.py  name_list_entry.py  new_post.py  notification_view.py  notifications.py  prefs.py  scroller.py  status_post.py  timeline.py  user_profile.py
mammudon/layouts/default/: audio_player.html  audio_with_preview.html  audio_without_preview.html  boosted_by.html  card_body_link_image.html  card_body_link_no_image.html  card_body_photo.html  card_body_rich_text.html  card_body_video.html  card_marker_alt.html  conversation.html  display_name.html  gifv_player.html  image_with_preview.html  image_without_preview.html  in_reply_to.html  layout.txt  media_grid.html  media_marker_alt.html  media_marker_gifv.html  media_markers.html  notification.html  notification_favourite.html  notification_favourite_avatar.html  notification_follow.html  notification_follow_request.html  notification_mention.html  notification_poll.html  notification_poll_own.html  notification_post_avatar.html  notification_reblog.html  notification_status.html  notification_update.html  poll.html  poll_footer_closed.html  poll_footer_open.html  poll_footer_open_results.html  poll_footer_voted.html  poll_item_checkbox.html  poll_item_closed.html  (+5 more)
mammudon/res/: about_mammudon_en.html  demo_boosted_by.dict  demo_status.dict
mammudon/themes/dark/: body.css  card.css  in_reply_to.css  media_hover.css  notification.css  notification_body.css  notification_post.css  poll.css  post.css  spoiler.css
mammudon/themes/light/: audio_player.css  body.css  card.css  conversation.css  media.css  notification_body.css  poll.css  spoiler.css  theme.txt
mammudon/ui/: account_manager.ui  conversation_view.ui  edit_media_attachment.ui  image_browser.ui  mammudon_main_window.ui  media_attachment.ui  name_list_entry.ui  new_post.ui  notification_view.ui  post_history_view.ui  postview.ui  preferences.ui  timeline.ui  user_profile.ui
